--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -29,7 +29,7 @@ nav {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-end;
-		align-items: center;
+		align-items: stretch;
 		width: auto;
 		top: 0;
 	}
@@ -42,9 +42,11 @@ nav {
 		display: none;
 
 		@media #{$mid-point} {
-			display: inline-block;
-			height: auto;
-			border-bottom: 1px solid rgba(255,255,255,0);
+			display: inline-flex;
+			align-items: center;
+			height: 100%;
+			padding: 0 6px;
+			border-bottom: 5px solid rgba(255,255,255,0);
 			color: rgba(255,255,255,.8);
 		}
 
